Add heading and logo styles

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,9 +10,24 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Robin Hobb Fan Page</title>
 </head>
+
 <body>
-   <header>Robin Hobb. Also known as Megan Lindholm</header>
-   <section>dragon image</section>
+    <header>
+        <a href="index.html">
+            <h1 id="logo">Robin Hobb. Also known as Megan Lindholm</h1>
+        </a>
+        <nav>
+            <ul>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="collection.html">Collection</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <section>dragon image</section>
     <section>biography
     </section>
     <section>quotes and reviews</section>
@@ -19,4 +35,5 @@
         social links etc
     </footer>
 </body>
+
 </html>
