--- a/index.html
+++ b/index.html
@@ -7,30 +7,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Tribute page for the author Robin Hobb">
     <meta name="keywords" content="robin hobb, fantasy books, middle earth, dragons">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Robin Hobb Fan Page</title>
 </head>
 
 <body>
-    <header>
+    <header id="top">
         <a href="index.html">
-            <h1 id="logo">Robin Hobb. Also known as Megan Lindholm</h1>
+            <h1 id="logo">Robin Hobb</h1>
         </a>
         <nav>
-            <ul>
-                <li>
-                    <a href="index.html">Home</a>
-                </li>
-                <li>
-                    <a href="collection.html">Collection</a>
-                </li>
+            <ul id="menu-bar">
+                <li><a href="meetups.html" class="active">Meetups</a></li>
+                <li><a href="collection.html" class="active">Collection</a></li>
+                <li><a href="index.html" class="active">Home</a></li>
             </ul>
         </nav>
-    </header>
-    <section>dragon image</section>
-    <section>biography
+        <h3>A pseudonym used by Megan Lindholm
+        </h3>
+        </header>
+    <section class="hero-outer">
+        <p id="review">"Fantasy as it ought to be written" GEORGE R.R. MARTIN</p>
+        <hr>
+        
+        <div id="hero-image">
+        
+        </section>
+        </div>
+    <section>
+        <div id="quotes">
+            <p></p>
+        </div>
     </section>
-    <section>quotes and reviews</section>
+    <section>
+        <div>
+            <article id="biography">
+            <span id="middle-content">
+                <h3>biography</h3>
+            <p>
+            Robin Hobb is an American writer of Fantasy novels, including the award-winning Realm of the Elderlings series. She has also written and published extensively under the name Megan Lindholm.
+            Her best known work is The Farseer Trilogy, now celebrating it's 25th birthday with a lavish illustrated edition, with work by the talented Magali Villeneuve.  Other works include The LIveship Traders Trilogy, The Tawny Many Trilogy, The Rain Wild Chronicles, and The Fitz and the Fool Trilogy. 
+            Robin resides in the Pacific Northwest, where she lives on a 14 acre pocket farm near Roy,  with her family, which includes two rescued Belgian Malinois, Ginger and Molly, fifteen chickens, a gander and 8 ducks, numberous volunteers mallards and a cat named Little Black Dog. </p>
+            </span>
+            </article>
+        </div>
+        </section>
+        <section>
+
+        </section>
+
     <footer>
         social links etc
     </footer>
