--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <li><a href="index.html" class="active">Home</a></li>
             </ul>
         </nav>
-        <h3 id="megan">A pseudonym used by Megan Lindholm
+        <h3 class="megan">A pseudonym used by Megan Lindholm
             <hr>
         </h3>
         </header>
@@ -49,18 +49,31 @@
             <p>
             Robin Hobb is an American writer of Fantasy novels, including the award-winning Realm of the Elderlings series. She has also written and published extensively under the name Megan Lindholm.
             Her best known work is The Farseer Trilogy, now celebrating it's 25th birthday with a lavish illustrated edition, with work by the talented Magali Villeneuve.  Other works include The LIveship Traders Trilogy, The Tawny Many Trilogy, The Rain Wild Chronicles, and The Fitz and the Fool Trilogy. 
-            Robin resides in the Pacific Northwest, where she lives on a 14 acre pocket farm near Roy,  with her family, which includes two rescued Belgian Malinois, Ginger and Molly, fifteen chickens, a gander and 8 ducks, numberous volunteers mallards and a cat named Little Black Dog. </p>
+            Robin resides in the Pacific Northwest, where she lives on a 14 acre pocket farm near Roy,  with her family, which includes two rescued Belgian Malinois, Ginger and Molly, fifteen chickens, a gander and 8 ducks, numberous volunteers mallards and a cat named Little Black Dog. 
+            </p>
+            <i class="fa-solid fa-dragon"></i>
             </span>
             </article>
         </div>
-        </section>
-        <section>
-
-        </section>
-
     <footer>
-        social links etc
+        <h2>Find out more about Robin Hobb!</h2>
+        <ul class="social-networks">
+            <li>
+                <a href="https://www.facebook.com/robin.hobb" target="_blank" rel="noopener" aria-label="Visit Robin Hobb's Facebook page (opens in new tab)">
+                    <i class="fa-brands fa-facebook-f"></i></a></li>
+            <li>
+                <a href="http://www.robinhobb.com/" target="_blank" rel="noopener" aria-label="Visit Robin Hobb's blog (opens in new tab)">
+                    <i class="fa-solid fa-blog"></i></a></li>
+            <li>
+                <a href="https://www.amazon.com/Robin-Hobb/e/B000AP7LIY" target="_blank" rel="noopener" aria-label="Visit Amazon to buy her books (opens in new tab)">
+                    <i class="fa-brands fa-amazon"></i></a></li>
+            <li>
+                <a href="https://www.instagram.com/therealrobinhobb/?hl=en" target="_blank" rel="noopener" aria-label="Visit Robin Hobb's Instagram page (opens in new tab)">
+                    <i class="fa-brands fa-instagram"></i></a></li>
     </footer>
+
+<!-- font awesome script -->
+<script src="https://kit.fontawesome.com/205330c142.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
