Add last quote on collection page and fix font for quotes

--- a/collection.html
+++ b/collection.html
@@ -38,7 +38,7 @@
     
 </section>
 <section class="reviews">
-    <h3>
+    <h3 id="times">
         "As addictive as morphine" The Times
         
     </h3>
