Add youtube video and change font-size for headings, and add welcome note

--- a/index.html
+++ b/index.html
@@ -35,16 +35,23 @@
         
         </section>
         </div>
-    <<section>
+        <section class="welcome">
+            <p>
+                Welcome, fans of Robin Hobb! Read on to discover more about her work, we also host a book club
+                once a month to discuss this fantastic author!
+            </p>
+        </section>
+    <!-- <section>
         <div id="middle-review">
             <p class="reviews">"One of the most important writers in the 21st-century fantasy." Contra Costa Time</p>
+            
         </div>
-    </section>
+    </section> -->
     <div class="row">
         <div class="column"><img src="assets/images/robin3.webp" alt="" width="100%" height="500px"></div>
         <div class="column"><img src="assets/images/robinhobb6.jpeg" alt="" width="100%" height="500px"></div>
     </div>
-    <div>
+    <div id="biography">
         <h3>Biography</h3>
         <p>
             Robin Hobb is an American writer of Fantasy novels, including the award-winning Realm of the Elderlings series. She has also written and published extensively under the name Megan Lindholm.
@@ -52,6 +59,12 @@
             Robin resides in the Pacific Northwest, where she lives on a 14 acre pocket farm near Roy,  with her family, which includes two rescued Belgian Malinois, Ginger and Molly, fifteen chickens, a gander and 8 ducks, numberous volunteers mallards and a cat named Little Black Dog. 
         </p>
     </div>
+    <section id="video">
+        <iframe width="800" height="500" src="https://www.youtube.com/embed/tXLYSnMIrXM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+        </iframe>
+    </section>
+    <br>
+    <p id="video-text">Watch Robin Hobb and George R.R Martin discuss their carreers in writing fantasy!</p>
     <footer>
         <h2>Find out more about Robin Hobb below!</h2>
         <ul class="social-networks">
