Change image on meetup, and make images consistent on each page

--- a/meetups.html
+++ b/meetups.html
@@ -26,6 +26,12 @@
     </h3>
     </header>
 <body>
+    <section>
+        <div>
+            <h3 class="reviews">"One of the most important writers in the 21st-century fantasy." Contra Costa Time</p>
+            
+        </div>
+    </section>
     <div class="book-club">
     <section class="meetup-section"></div>
         <form method="POST" action="https://formdump.codeinstitute.net/" class="meetup-section">
@@ -34,9 +40,8 @@
             </p>
             <hr>
             <h2>Join our book club!
-                Or join our wine-book club!
             </h2>
-            <h3>Enter your email address to get updates of our monthly meetups to discuss Robin Hobb books and drink wine! </h3>
+            <h3>Enter your email address to get updates of our monthly meetups where we discuss Robin Hobb books! </h3>
             <div class="email">
                 <label for="email-field" class="email-field">Email Address</label>
                 <input id="email-field" type="email" name="email" placeholder="Your email" required>
