--- a/collection.html
+++ b/collection.html
@@ -28,8 +28,8 @@
         </h3>
     </header>
     <section>
-        <div class="reviews">
-        <h3 id="times">
+        <div>
+        <h3 class="reviews">
             "As addictive as morphine" The Times
             
         </h3>
