--- a/collection.html
+++ b/collection.html
@@ -23,15 +23,13 @@
                 <li><a href="index.html" class="active">Home</a></li>
             </ul>
         </nav>
-        <h3 class="megan">A pseudonym used by Megan Lindholm
+        <h3 class="megan">A pseudonym used by Megan Lindholm</h3>
             <hr>
-        </h3>
     </header>
     <section>
         <div>
         <h3 class="reviews">
             "As addictive as morphine" The Times
-            
         </h3>
         </div>
     </section>
