--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <header id="top">
+    <header>
         <a href="index.html">
             <h1 id="logo">Robin Hobb</h1>
         </a>
@@ -23,11 +23,10 @@
                 <li><a href="index.html" class="active">Home</a></li>
             </ul>
         </nav>
-        <p class="megan">A pseudonym used by Megan Lindholm
-            <hr>
-        </h3>
+        <h3 class="megan">A pseudonym used by Megan Lindholm</h3>
+        <hr>
         </header>
-    <section class>
+    <section>
         <h3 class="reviews">"Fantasy as it ought to be written" George R.R Martin
         </h3></section>
         <section>
@@ -41,12 +40,6 @@
                 once a month to discuss this fantastic author!
             </p>
         </section>
-    <!-- <section>
-        <div id="middle-review">
-            <p class="reviews">"One of the most important writers in the 21st-century fantasy." Contra Costa Time</p>
-            
-        </div>
-    </section> -->
     <div class="row">
         <div class="column"><img src="assets/images/robin3.webp" alt="" width="100%" height="500px"></div>
         <div class="column"><img src="assets/images/robinhobb6.jpeg" alt="" width="100%" height="500px"></div>
