--- a/meetups.html
+++ b/meetups.html
@@ -21,9 +21,8 @@
             <li><a href="index.html" class="active">Home</a></li>
         </ul>
     </nav>
-    <h3 class="megan">A pseudonym used by Megan Lindholm
+    <h3 class="megan">A pseudonym used by Megan Lindholm</h3>
         <hr>
-    </h3>
     </header>
 <body>
     <section>
