--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
         <div class="column"><img src="assets/images/robin3.webp" alt="" width="100%" height="500px"></div>
         <div class="column"><img src="assets/images/robinhobb6.jpeg" alt="" width="100%" height="500px"></div>
     </div>
-    <div id="biography">
-        <h3>Biography</h3>
-        <p>
+    <div>
+        <h3 id="biography" >Biography</h3>
+        <p id="robin">
             Robin Hobb is an American writer of Fantasy novels, including the award-winning Realm of the Elderlings series. She has also written and published extensively under the name Megan Lindholm.
             Her best known work is The Farseer Trilogy, now celebrating it's 25th birthday with a lavish illustrated edition, with work by the talented Magali Villeneuve.  Other works include The LIveship Traders Trilogy, The Tawny Many Trilogy, The Rain Wild Chronicles, and The Fitz and the Fool Trilogy. 
             Robin resides in the Pacific Northwest, where she lives on a 14 acre pocket farm near Roy,  with her family, which includes two rescued Belgian Malinois, Ginger and Molly, fifteen chickens, a gander and 8 ducks, numberous volunteers mallards and a cat named Little Black Dog. 
