Complete collection page, add series list and summary of each

--- a/collection.html
+++ b/collection.html
@@ -39,10 +39,36 @@
     </section>
 <section id="summary">
     <h2 id="early-work">Robin Hobb's early work</h3>
-    <p>The Farseer novels were the first works written as Robin Hobb, a pseudonym of American author Margaret Astrid Lindholm Ogden. Her earlier writing appeared under the name Megan Lindholm, in the genres of urban fantasy and science fiction. Lindholm's work was critically well-received, including Hugo and Nebula Award nominations for her short fiction, but did not do as well in terms of sales. In 1995, the author shifted to writing secondary-world fantasy and adopted a new byline, Robin Hobb. This was an intentionally androgynous name chosen to match the Fitz novels, which were written in a first-person male narrative voice.
-        The series incubated over a number of years, with the core idea being: "What if magic were addictive? And what if the addiction was destructive or degenerative?". The first book had the working title Chivalry's Bastard, which was later changed to Assassin's Apprentice. Fitz's narrative was structured as a trilogy from the beginning, with Hobb stating that the story was too complex to fit in one book and naturally broke into three parts. The relationship between Fitz and the wolf Nighteyes was based on a half-wolf called Bruno that moved into Hobb's home in Alaska in the 1950s. The enigmatic character known as the Fool was initially not a big part of the series' outline, but grew into a major character as the novels were written. The Farseer books went on to be critically and commercially successful, and became the first of five series set in the Realm of the Elderlings, which concluded in 2017.</p>
+    <p>The Farseer novels were the first works written as Robin Hobb, a pseudonym of American author Margaret Astrid Lindholm Ogden. Her earlier writing appeared under the name Megan Lindholm, in the genres of urban fantasy and science fiction. 
+        Lindholm's work was critically well-received, including Hugo and Nebula Award nominations for her short fiction, but did not do as well in terms of sales. In 1995, the author shifted to writing secondary-world fantasy and adopted a new byline, Robin Hobb. 
+        This was an intentionally androgynous name chosen to match the Fitz novels, which were written in a first-person male narrative voice.
+        The series incubated over a number of years, with the core idea being: "What if magic were addictive? And what if the addiction was destructive or degenerative?". </p>
 </section>
-<section>
+<section id="chronological">
+    <h2 class="reviews">In Chronological order:</h2>
+    <ul id="list">
+        <lh>The Farseer Trilogy</lh>
+        <hr>
+        <li>The trilogy follows the early life of FitzChivalry Farseer, illegitimate son of a prince and melancholy hero.</li>
+        <lh>The Liveship Traders Trilogy</lh>
+        <hr>
+        <li>At one time, possession of a Liveship, constructed of magical wizard wood, guaranteed a Trader's family prosperity. 
+            Only a Liveship can brave the dangers of the Rain Wild River and trade with the legendary Rain Wild Traders and their mysterious magical goods, plundered from the enigmatic Elderling ruins.</li>
+        <lh>The Tawny Man Trilogy</lh>
+        <hr>
+        <li>In an evolution of this narrative, the Tawny Man trilogy shifts focus from Fitz's personal struggle to the larger struggle for equal rights for the Witted. 
+            Fool's Errand features a group of Witted revolutionaries called the Piebalds, who attempt a military uprising against the Farseer throne.</li>
+        <lh>The Rain Wild Chronicals</lh>
+        <hr>
+        <li>The Rain Wilds Chronicles document a quest with world-changing consequences, but Hobb keeps the narrative focus on her characters. 
+            There are no pre-ordained outcomes or messianic Luke Skywalkers here, only people with their own problems to solve and their own journeys to adulthood and/or freedom to complete.</li>
+        <lh>Fitz and the Fool Trilogy</lh>
+        <hr>
+        <li>As Bee is dragged by her sadistic captors across half the world, Fitz and the Fool, believing her dead, 
+            embark on a mission of revenge that will take them to the distant island where the Servants reside—a place the Fool once called home and later called prison.</li>
+    </ul>
+    </section>
+    <section>
     <div class="row2">
     <div class="column2">
         <img src="assets/images/total.jpeg" alt="collection of robin hobb books">
