Fix images that were cut off at the top and fix the email input button and area

--- a/meetups.html
+++ b/meetups.html
@@ -43,7 +43,7 @@
             <h3>Enter your email address to get updates of our monthly meetups where we discuss Robin Hobb books! </h3>
             <div class="email">
                 <label for="email-field" class="email-field">Email Address</label>
-                <input id="email-field" type="email" name="email" placeholder="Your email" required>
+                <input id="email-field" type="email" name="email" required>
                 <input class="email" type="submit" value="Join book club" name="subscribe">
             </div>
         </form>
