Fix empty space inbetween some sections, add map and times for meetup

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <br>
         <section class="welcome">
             <p>
-                Welcome, fans of Robin Hobb! Read on to discover more about her work, we also host a book club
+                Welcome, fans of Robin Hobb! Read on to discover more about her work. We also host a book club
                 once a month to discuss this fantastic author!
             </p>
         </section>
