Fix series heading and image opacity. Make formdump page and thank you message

--- a/collection.html
+++ b/collection.html
@@ -45,7 +45,7 @@
         The series incubated over a number of years, with the core idea being: "What if magic were addictive? And what if the addiction was destructive or degenerative?". </p>
 </section>
 <section id="chronological">
-    <h2 class="reviews">In Chronological order:</h2>
+    <h2 id="order">In Chronological order:</h2>
     <ul id="list">
         <lh>The Farseer Trilogy</lh>
         <hr>
@@ -68,7 +68,7 @@
             embark on a mission of revenge that will take them to the distant island where the Servants reside—a place the Fool once called home and later called prison.</li>
     </ul>
     </section>
-    <section>
+    <section class="row2">
     <div class="row2">
     <div class="column2">
         <img src="assets/images/total.jpeg" alt="collection of robin hobb books">
