--- a/meetups.html
+++ b/meetups.html
@@ -33,7 +33,7 @@
     </section>
     <div class="book-club">
     <section class="meetup-section"></div>
-        <form method="POST" action="https://formdump.codeinstitute.net/" class="meetup-section">
+        <form method="get" action="formdump.html" class="meetup-section">
             <p>Monthly meetups with likeminded Robin Hobb fans! Meetup points vary, if you have a location to suggest, please let us know!
                 If you're a true Realm of the Elderlings fan, you have to join us!
             </p>
