--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <li><a href="index.html" class="active">Home</a></li>
             </ul>
         </nav>
-        <h3 class="megan">A pseudonym used by Megan Lindholm</h3>
+        <p class="megan">A pseudonym used by Megan Lindholm</p>
         <hr>
         </header>
     <section>
@@ -45,7 +45,7 @@
         <div class="column"><img src="assets/images/robinhobb6.jpeg" alt="" width="100%" height="500px"></div>
     </div>
     <div>
-        <h3 id="biography" >Biography</h3>
+        <h3 class="biography" >Biography</h3>
         <p id="robin">
             Robin Hobb is an American writer of Fantasy novels, including the award-winning Realm of the Elderlings series. She has also written and published extensively under the name Megan Lindholm.
             Her best known work is The Farseer Trilogy, now celebrating it's 25th birthday with a lavish illustrated edition, with work by the talented Magali Villeneuve.  Other works include The LIveship Traders Trilogy, The Tawny Many Trilogy, The Rain Wild Chronicles, and The Fitz and the Fool Trilogy. 
