--- a/meetups.html
+++ b/meetups.html
@@ -21,7 +21,7 @@
             <li><a href="index.html" class="active">Home</a></li>
         </ul>
     </nav>
-    <h3 class="megan">A pseudonym used by Megan Lindholm</h3>
+    <p class="megan">A pseudonym used by Megan Lindholm</p>
         <hr>
     </header>
 <body>
