--- a/meetups.html
+++ b/meetups.html
@@ -31,8 +31,8 @@
             
         </div>
     </section>
-    <div class="book-club">
-    <section class="meetup-section"></div>
+    <div class="book-club"></div>
+    <section class="meetup-section">
         <form method="get" action="formdump.html" class="meetup-section">
             <p>Monthly meetups with likeminded Robin Hobb fans! Meetup points vary, if you have a location to suggest, please let us know!
                 If you're a true Realm of the Elderlings fan, you have to join us!
@@ -48,13 +48,15 @@
         </section>
         <section>
             <div>
-                <ul id="meetup-times">
+                <ul class="meetup-times">
                     <li><i class="fa-solid fa-calendar-check"></i> Every Saturday</li>
                     <li><i class="fa-solid fa-location-pin"></i> In Dublin City</li>
                     <li><i class="fa-solid fa-question"></i> Click the join button to find out more!</li>
                 </ul>
             </div>
+            <section class="map">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d152515.98633729748!2d-6.385786721003542!3d53.324238067083755!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48670e80ea27ac2f%3A0xa00c7a9973171a0!2sDublin%2C%20Ireland!5e0!3m2!1sen!2ses!4v1650618416850!5m2!1sen!2ses" width="800" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </section>
         </section>
         </form>
     
