Finish media query for medium screen and finish screen max 768px

--- a/meetups.html
+++ b/meetups.html
@@ -27,7 +27,7 @@
 <body>
     <section>
         <div>
-            <h3 class="reviews">"One of the most important writers in the 21st-century fantasy." Contra Costa Time</p>
+            <h3 class="reviews">"A master fantasist" Baltimore Sun</p>
             
         </div>
     </section>
