--- a/collection.html
+++ b/collection.html
@@ -69,10 +69,11 @@
     </ul>
     </section>
     <section class="row2">
-    <div class="row2">
+    <div>
     <div class="column2">
         <img src="assets/images/total.jpeg" alt="collection of robin hobb books">
         
+    </div>
     </div>
 </section>
 <footer>
