Fix images on Home Page for screens max 320px, fix bug

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
             </p>
         </section>
     <div class="row">
-        <div class="column"><img src="assets/images/robin3.webp" alt="" width="100%" height="500px"></div>
-        <div class="column"><img src="assets/images/robinhobb6.jpeg" alt="" width="100%" height="500px"></div>
+        <div class="column column-a"><img src="assets/images/robin3.webp" alt="robin hobb" width="100%" height="500px"></div>
+        <div class="column column-b"><img src="assets/images/robinhobb6.jpeg" alt="robin hobb with mask" width="100%" height="500px"></div>
     </div>
     <div>
         <h3 class="biography" >Biography</h3>
