Finish small screen 320px media query

--- a/meetups.html
+++ b/meetups.html
@@ -39,7 +39,7 @@
             </p>
             <h2>Join our book club!
             </h2>
-            <h3>Enter your email address to get updates of our monthly meetups where we discuss Robin Hobb books! </h3>
+            <h3 id="enter">Enter your email address to get updates of our monthly meetups where we discuss Robin Hobb books! </h3>
             <div class="email">
                 <label for="email-field" class="email-field">Email Address</label>
                 <input id="email-field" type="email" name="email" required>
