--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </p>
     </div>
     <section id="video">
-        <iframe width="800" height="500" src="https://www.youtube.com/embed/tXLYSnMIrXM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+        <iframe width="100%" height="500" src="https://www.youtube.com/embed/tXLYSnMIrXM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
         </iframe>
     </section>
     <br>
