Fix bugs for responsive screens, display of image was wrong

--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@
         <br>
         <section class="welcome">
             <p>
-                Welcome, fans of Robin Hobb! Read on to discover more about her work. We also host a book club
-                once a month to discuss this fantastic author!
+                Welcome, this is a fan page dedicated to Robin Hobb! Ahead you'll find a bio on Robin Hobb and a video 
+                interview. Social media and amazon links at the end of the page, and the following page you can check out
+                her books in chronological order, along with a summary and picures of each series. The last page you'll find where to apply 
+                for an email-list to get involved with our meetups based in Dublin, Ireland! 
             </p>
         </section>
     <div class="row">
