--- a/meetups.html
+++ b/meetups.html
@@ -34,10 +34,10 @@
     <div class="book-club"></div>
     <section class="meetup-section">
         <form method="get" action="formdump.html" class="meetup-section">
-            <p>Monthly meetups with likeminded Robin Hobb fans! Meetup points vary, if you have a location to suggest, please let us know!
-                If you're a true Realm of the Elderlings fan, you have to join us!
+            <p>Monthly meetups with likeminded Robin Hobb fans. If you're in the area, signup and let's meet!
+                Meetups happen every Saturday in Dublin. New fans welcome! 
             </p>
-            <h2>Join our book club!
+            <h2>Join our book club.
             </h2>
             <h3 id="enter">Enter your email address to get updates of our monthly meetups where we discuss Robin Hobb books! </h3>
             <div class="email">
@@ -55,7 +55,7 @@
                 </ul>
             </div>
             <div class="map">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d152515.98633729748!2d-6.385786721003542!3d53.324238067083755!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48670e80ea27ac2f%3A0xa00c7a9973171a0!2sDublin%2C%20Ireland!5e0!3m2!1sen!2ses!4v1650618416850!5m2!1sen!2ses" width="100%" height="500px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d152515.98633729748!2d-6.385786721003542!3d53.324238067083755!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48670e80ea27ac2f%3A0xa00c7a9973171a0!2sDublin%2C%20Ireland!5e0!3m2!1sen!2ses!4v1650618416850!5m2!1sen!2ses" width="90%" height="500px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
             
         </section>
