Fix spelling errors in text on first page

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
         <br>
         <section class="welcome">
             <p>
-                Welcome, this is a fan page dedicated to Robin Hobb! Ahead you'll find a bio on Robin Hobb and a video 
-                interview. Social media and amazon links at the end of the page, and the following page you can check out
-                her books in chronological order, along with a summary and picures of each series. The last page you'll find where to apply 
+                Welcome! This is a fan page dedicated to Robin Hobb! Ahead you'll find a bio on Robin Hobb and a video 
+                interview, social media and Amazon links at the bottom of the page, and the following page you can check out
+                her books in chronological order, along with a summary and pictures of each series. The last page you'll find where to apply 
                 for an email-list to get involved with our meetups based in Dublin, Ireland! 
             </p>
         </section>
@@ -50,8 +50,8 @@
         <h3 class="biography" >Biography</h3>
         <p id="robin">
             Robin Hobb is an American writer of Fantasy novels, including the award-winning Realm of the Elderlings series. She has also written and published extensively under the name Megan Lindholm.
-            Her best known work is The Farseer Trilogy, now celebrating it's 25th birthday with a lavish illustrated edition, with work by the talented Magali Villeneuve.  Other works include The LIveship Traders Trilogy, The Tawny Many Trilogy, The Rain Wild Chronicles, and The Fitz and the Fool Trilogy. 
-            Robin resides in the Pacific Northwest, where she lives on a 14 acre pocket farm near Roy,  with her family, which includes two rescued Belgian Malinois, Ginger and Molly, fifteen chickens, a gander and 8 ducks, numberous volunteers mallards and a cat named Little Black Dog. 
+            Her best known work is The Farseer Trilogy, now celebrating its 25th birthday with a lavish illustrated edition, with work by the talented Magali Villeneuve.  Other works include The Liveship Traders Trilogy, The Tawny Many Trilogy, The Rain Wild Chronicles, and The Fitz and the Fool Trilogy. 
+            Robin resides in the Pacific Northwest, where she lives on a 14 acre pocket farm near Roy,  with her family, which includes two rescued Belgian Malinois, Ginger and Molly, fifteen chickens, a gander and 8 ducks, numerous volunteers, mallards and a cat named Little Black Dog. 
         </p>
     </div>
     <section id="video">
@@ -59,7 +59,7 @@
         </iframe>
     </section>
     <br>
-    <p id="video-text">Watch Robin Hobb and George R.R Martin discuss their carreers in writing fantasy!</p>
+    <p id="video-text">Watch Robin Hobb and George R.R Martin discuss their careers in writing fantasy!</p>
     <footer>
         <h2>Find out more about Robin Hobb below!</h2>
         <ul class="social-networks">
