--- a/index.html
+++ b/index.html
@@ -42,13 +42,11 @@
                 for an email-list to get involved with our meetups based in Dublin, Ireland! 
             </p>
         </section>
-    <div class="row">
-        <div class="column column-a"><img src="assets/images/robin3.webp" alt="robin hobb" width="100%" height="500px"></div>
-        <div class="column column-b"><img src="assets/images/robinhobb6.jpeg" alt="robin hobb with mask" width="100%" height="500px"></div>
+    <div id="circle">
     </div>
-    <div>
-        <h3 class="biography" >Biography</h3>
-        <p id="robin">
+    <h3 class="biography" >Biography</h3>
+    <div id="robin">
+        <p>
             Robin Hobb is an American writer of Fantasy novels, including the award-winning Realm of the Elderlings series. She has also written and published extensively under the name Megan Lindholm.
             Her best known work is The Farseer Trilogy, now celebrating its 25th birthday with a lavish illustrated edition, with work by the talented Magali Villeneuve.  Other works include The Liveship Traders Trilogy, The Tawny Many Trilogy, The Rain Wild Chronicles, and The Fitz and the Fool Trilogy. 
             Robin resides in the Pacific Northwest, where she lives on a 14 acre pocket farm near Roy,  with her family, which includes two rescued Belgian Malinois, Ginger and Molly, fifteen chickens, a gander and 8 ducks, numerous volunteers, mallards and a cat named Little Black Dog. 
