Thank you page linked correctly, responsive design fix for thank you page

--- a/meetups.html
+++ b/meetups.html
@@ -33,7 +33,7 @@
     </section>
     <div class="book-club"></div>
     <section class="meetup-section">
-        <form method="get" action="formdump.html" class="meetup-section">
+        <form method="get" action="thankyou.html" class="meetup-section">
             <p>Monthly meetups with likeminded Robin Hobb fans. If you're in the area, signup and let's meet!
                 Meetups happen every Saturday in Dublin. New fans welcome! 
             </p>
