Block out code for small heading in header

--- a/index.html
+++ b/index.html
@@ -52,12 +52,14 @@
             Robin resides in the Pacific Northwest, where she lives on a 14 acre pocket farm near Roy,  with her family, which includes two rescued Belgian Malinois, Ginger and Molly, fifteen chickens, a gander and 8 ducks, numerous volunteers, mallards and a cat named Little Black Dog. 
         </p>
     </div>
+    <div id="video-text">
+    <h4>Watch Robin Hobb and George R.R Martin discuss their careers in writing fantasy!</h4>
+    </div>
     <section id="video">
         <iframe width="100%" height="500" src="https://www.youtube.com/embed/tXLYSnMIrXM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
         </iframe>
     </section>
     <br>
-    <p id="video-text">Watch Robin Hobb and George R.R Martin discuss their careers in writing fantasy!</p>
     <footer>
         <h2>Find out more about Robin Hobb below!</h2>
         <ul class="social-networks">
