--- a/thankyou.html
+++ b/thankyou.html
@@ -23,7 +23,7 @@
                 <li><a href="index.html" class="active">Home</a></li>
             </ul>
         </nav>
-        <h3 class="megan">A pseudonym used by Megan Lindholm</h3>
+        <!--- <h3 class="megan">A pseudonym used by Megan Lindholm</h3> --->
         <br>
         <hr>
         </header>
