--- a/index.html
+++ b/index.html
@@ -29,19 +29,17 @@
     <section>
         <h3 class="reviews">"Fantasy as it ought to be written" George R.R Martin
         </h3></section>
-        <section>
         <div id="hero-image">
         </div>
-        </section>
         <br>
-        <section class="welcome">
+        <div class="welcome">
             <p>
                 Welcome! This is a fan page dedicated to Robin Hobb! Ahead you'll find a bio on Robin Hobb and a video 
                 interview, social media and Amazon links at the bottom of the page, and the following page you can check out
                 her books in chronological order, along with a summary and pictures of each series. The last page you'll find where to apply 
                 for an email-list to get involved with our meetups based in Dublin, Ireland! 
             </p>
-        </section>
+        </div>
     <div id="circle">
     </div>
     <h3 class="biography" >Biography</h3>
@@ -55,10 +53,10 @@
     <div id="video-text">
     <h4>Watch Robin Hobb and George R.R Martin discuss their careers in writing fantasy!</h4>
     </div>
-    <section id="video">
-        <iframe width="100%" height="500" src="https://www.youtube.com/embed/tXLYSnMIrXM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+    <div id="video">
+        <iframe width="100" height="500" src="https://www.youtube.com/embed/tXLYSnMIrXM" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
         </iframe>
-    </section>
+    </div>
     <br>
     <footer>
         <h2>Find out more about Robin Hobb below!</h2>
