Fix more bugs found in responsive design

--- a/meetups.html
+++ b/meetups.html
@@ -47,8 +47,8 @@
             </div>
         </section>
         <section>
-            <div>
-                <ul class="meetup-times">
+            <div class="meetup-times">
+                <ul class="">
                     <li><i class="fa-solid fa-calendar-check"></i> Every Saturday</li>
                     <li><i class="fa-solid fa-location-pin"></i> In Dublin City</li>
                     <li><i class="fa-solid fa-question"></i> Click the join button to find out more!</li>
