Remove review section

--- a/meetups.html
+++ b/meetups.html
@@ -24,18 +24,13 @@
         <hr>
     </header>
 <body>
-    <section>
-        <div>
-            <h3 class="reviews">"A master fantasist" Baltimore Sun</p>   
-        </div>
-    </section>
     <div class="book-club"></div>
     <section class="meetup-section">
         <form method="get" action="thankyou.html" class="meetup-section">
             <p>Monthly meetups with likeminded Robin Hobb fans. If you're in the area, signup and let's meet!
                 Meetups happen every Saturday in Dublin. New fans welcome! 
             </p>
-            <h2>Join our book club.
+            <h2>Join our book club
             </h2>
             <h3 id="enter">Enter your email address to get updates of our monthly meetups where we discuss Robin Hobb books! </h3>
             <div class="email">
