--- a/collection.html
+++ b/collection.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Tribute page for the author Robin Hobb">
     <meta name="keywords" content="robin hobb, fantasy books, middle earth, dragons">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Robin Hobb Fan Page</title>
 </head>
 <body>
