--- a/collection.html
+++ b/collection.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <header id="top">
+        <link rel="shortcut icon" href="#">
         <a href="index.html">
             <h1 id="logo">Robin Hobb</h1>
         </a>
