--- a/meetups.html
+++ b/meetups.html
@@ -10,6 +10,7 @@
     <title>Robin Hobb Fan Page</title>
 </head>
 <header id="top">
+    <link rel="shortcut icon" href="#">
     <a href="index.html">
         <h1 id="logo">Robin Hobb</h1>
     </a>
