--- a/thankyou.html
+++ b/thankyou.html
@@ -11,7 +11,8 @@
     <title>Robin Hobb Fan Page</title>
 </head>
 <body>
-    <header>
+    <header id="top">
+        <link rel="shortcut icon" href="#">
         <a href="index.html">
             <h1 id="logo">Robin Hobb</h1>
         </a>
