--- a/collection.html
+++ b/collection.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header id="top">
-        <link rel="shortcut icon" href="#">
+        <link rel="shortcut icon" href="favicon.ico" />
         <a href="index.html">
             <h1 id="logo">Robin Hobb</h1>
         </a>
