--- a/meetups.html
+++ b/meetups.html
@@ -9,8 +9,9 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Robin Hobb Fan Page</title>
 </head>
+<body>
 <header id="top">
-    <link rel="shortcut icon" href="#">
+    <link rel="shortcut icon" href="favicon.ico" />
     <a href="index.html">
         <h1 id="logo">Robin Hobb</h1>
     </a>
@@ -24,7 +25,6 @@
     <p class="megan">A pseudonym used by Megan Lindholm</p>
         <hr>
     </header>
-<body>
     <div class="book-club"></div>
     <section class="meetup-section">
         <form method="get" action="thankyou.html" class="meetup-section">
@@ -73,7 +73,5 @@
     </footer>
 <!-- font awesome script -->
 <script src="https://kit.fontawesome.com/205330c142.js" crossorigin="anonymous"></script>
-
 </body>
-
 </html>
