--- a/thankyou.html
+++ b/thankyou.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,7 +11,7 @@
 </head>
 <body>
     <header id="top">
-        <link rel="shortcut icon" href="#">
+        <link rel="shortcut icon" href="favicon.ico" />
         <a href="index.html">
             <h1 id="logo">Robin Hobb</h1>
         </a>
@@ -46,5 +45,4 @@
     <!-- font awesome script -->
     <script src="https://kit.fontawesome.com/205330c142.js" crossorigin="anonymous"></script>
     </body>
-    
     </html>
