Delete unnecessary code

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <meta name="description" content="Tribute page for the author Robin Hobb">
     <meta name="keywords" content="robin hobb, fantasy books, middle earth, dragons">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="shortcut icon" href="favicon.ico"/>
     <title>Robin Hobb Fan Page</title>
 </head>
 <body>
-    <header id="top">
-        <link rel="shortcut icon" href="#">
+    <header>
         <a href="index.html">
             <h1 id="logo">Robin Hobb</h1>
         </a>
@@ -24,7 +24,7 @@
         </nav>
         <p class="megan">A pseudonym used by Megan Lindholm</p>
         <hr>
-        </header>
+    </header>
         <div id="hero-image">
         </div>
         <br>
