--- a/collection.html
+++ b/collection.html
@@ -7,11 +7,11 @@
     <meta name="description" content="Tribute page for the author Robin Hobb">
     <meta name="keywords" content="robin hobb, fantasy books, middle earth, dragons">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="shortcut icon" href="favicon.ico"/>
     <title>Robin Hobb Fan Page</title>
 </head>
 <body>
-    <header id="top">
-        <link rel="shortcut icon" href="favicon.ico" />
+    <header>
         <a href="index.html">
             <h1 id="logo">Robin Hobb</h1>
         </a>
