Add Tailwind.css cdn and add into navbar

--- a/index.html
+++ b/index.html
@@ -1,77 +1,141 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Tribute page for the author Robin Hobb">
-    <meta name="keywords" content="robin hobb, fantasy books, middle earth, dragons">
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="shortcut icon" href="favicon.ico"/>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Tribute page for the author Robin Hobb" />
+    <meta
+      name="keywords"
+      content="robin hobb, fantasy books, middle earth, dragons"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="shortcut icon" href="favicon.ico" />
     <title>Robin Hobb Fan Page</title>
-</head>
-<body>
-    <header>
-        <a href="index.html">
-            <h1 id="logo">Robin Hobb</h1>
-        </a>
-        <nav>
-            <ul id="menu-bar">
-                <li><a href="meetups.html" class="active">Meetups</a></li>
-                <li><a href="collection.html" class="active">Collection</a></li>
-                <li><a href="index.html" class="active">Home</a></li>
-            </ul>
-        </nav>
-        <p class="megan">A pseudonym used by Megan Lindholm</p>
-        <hr>
-    </header>
-        <div id="hero-image">
-        </div>
-        <br>
-        <div class="welcome">
-            <p>
-                Welcome! This is a fan page dedicated to Robin Hobb! Ahead you'll find a bio on Robin Hobb and a video 
-                interview, social media and Amazon links at the bottom of the page, and the following page you can check out
-                her books in chronological order, along with a summary and pictures of each series. The last page you'll find where to apply 
-                for an email-list to get involved with our meetups based in Dublin, Ireland! 
-            </p>
-        </div>
-    <div id="circle">
-    </div>
-    <h3 class="biography" >Biography</h3>
-    <div id="robin">
-        <p>
-            Robin Hobb is an American writer of Fantasy novels, including the award-winning Realm of the Elderlings series. She has also written and published extensively under the name Megan Lindholm.
-            Her best known work is The Farseer Trilogy, now celebrating its 25th birthday with a lavish illustrated edition, with work by the talented Magali Villeneuve.  Other works include The Liveship Traders Trilogy, The Tawny Many Trilogy, The Rain Wild Chronicles, and The Fitz and the Fool Trilogy. 
-            Robin resides in the Pacific Northwest, where she lives on a 14 acre pocket farm near Roy,  with her family, which includes two rescued Belgian Malinois, Ginger and Molly, fifteen chickens, a gander and 8 ducks, numerous volunteers, mallards and a cat named Little Black Dog. 
+  </head>
+  <body>
+    <header class="bg-gray-900">
+      <a href="index.html">
+        <h1
+          id="logo"
+          class="text-4xl font-bold tracking-tight mx-6 sm:text-6xl"
+        >
+          Robin Hobb
+        </h1>
+      </a>
+      <nav class="space-x-4 m-15 ">
+        <ul id="menu-bar">
+          <li><a href="meetups.html" class="active">Meetups</a></li>
+          <li><a href="collection.html" class="active">Collection</a></li>
+          <li><a href="index.html" class="active">Home</a></li>
+        </ul>
+      </nav>
+      <div class="mb-3">
+        <p class="megan ml-2 font-bold text-xl">
+          A pseudonym used by Megan Lindholm
         </p>
+      </div>
+    </header>
+    <div id="hero-image"></div>
+    <br />
+    <div class="welcome">
+      <p>
+        Welcome! This is a fan page dedicated to Robin Hobb! Ahead you'll find a
+        bio on Robin Hobb and a video interview, social media and Amazon links
+        at the bottom of the page, and the following page you can check out her
+        books in chronological order, along with a summary and pictures of each
+        series. The last page you'll find where to apply for an email-list to
+        get involved with our meetups based in Dublin, Ireland!
+      </p>
+    </div>
+    <div id="circle"></div>
+    <h3 class="biography">Biography</h3>
+    <div id="robin">
+      <p>
+        Robin Hobb is an American writer of Fantasy novels, including the
+        award-winning Realm of the Elderlings series. She has also written and
+        published extensively under the name Megan Lindholm. Her best known work
+        is The Farseer Trilogy, now celebrating its 25th birthday with a lavish
+        illustrated edition, with work by the talented Magali Villeneuve. Other
+        works include The Liveship Traders Trilogy, The Tawny Many Trilogy, The
+        Rain Wild Chronicles, and The Fitz and the Fool Trilogy. Robin resides
+        in the Pacific Northwest, where she lives on a 14 acre pocket farm near
+        Roy, with her family, which includes two rescued Belgian Malinois,
+        Ginger and Molly, fifteen chickens, a gander and 8 ducks, numerous
+        volunteers, mallards and a cat named Little Black Dog.
+      </p>
     </div>
     <div id="video-text">
-    <h4>Watch Robin Hobb and George R.R Martin discuss their careers in writing fantasy!</h4>
+      <h4>
+        Watch Robin Hobb and George R.R Martin discuss their careers in writing
+        fantasy!
+      </h4>
     </div>
     <div id="video">
-        <iframe width="100" height="500" src="https://www.youtube.com/embed/tXLYSnMIrXM" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-        </iframe>
+      <iframe
+        width="100"
+        height="500"
+        src="https://www.youtube.com/embed/tXLYSnMIrXM"
+        title="YouTube video player"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen
+      >
+      </iframe>
     </div>
-    <br>
+    <br />
     <footer>
-        <h2>Find out more about Robin Hobb below!</h2>
-        <ul class="social-networks">
-            <li>
-                <a href="https://www.facebook.com/robin.hobb" target="_blank" rel="noopener" aria-label="Visit Robin Hobb's Facebook page (opens in new tab)">
-                    <i class="fa-brands fa-facebook-f"></i></a></li>
-            <li>
-                <a href="http://www.robinhobb.com/" target="_blank" rel="noopener" aria-label="Visit Robin Hobb's blog (opens in new tab)">
-                    <i class="fa-solid fa-blog"></i></a></li>
-            <li>
-                <a href="https://www.amazon.com/Robin-Hobb/e/B000AP7LIY" target="_blank" rel="noopener" aria-label="Visit Amazon to buy her books (opens in new tab)">
-                    <i class="fa-brands fa-amazon"></i></a></li>
-            <li>
-                <a href="https://www.instagram.com/therealrobinhobb/?hl=en" target="_blank" rel="noopener" aria-label="Visit Robin Hobb's Instagram page (opens in new tab)">
-                    <i class="fa-brands fa-instagram"></i></a></li>
-        </ul>
+      <h2>Find out more about Robin Hobb below!</h2>
+      <ul class="social-networks">
+        <li>
+          <a
+            href="https://www.facebook.com/robin.hobb"
+            target="_blank"
+            rel="noopener"
+            aria-label="Visit Robin Hobb's Facebook page (opens in new tab)"
+          >
+            <i class="fa-brands fa-facebook-f"></i
+          ></a>
+        </li>
+        <li>
+          <a
+            href="http://www.robinhobb.com/"
+            target="_blank"
+            rel="noopener"
+            aria-label="Visit Robin Hobb's blog (opens in new tab)"
+          >
+            <i class="fa-solid fa-blog"></i
+          ></a>
+        </li>
+        <li>
+          <a
+            href="https://www.amazon.com/Robin-Hobb/e/B000AP7LIY"
+            target="_blank"
+            rel="noopener"
+            aria-label="Visit Amazon to buy her books (opens in new tab)"
+          >
+            <i class="fa-brands fa-amazon"></i
+          ></a>
+        </li>
+        <li>
+          <a
+            href="https://www.instagram.com/therealrobinhobb/?hl=en"
+            target="_blank"
+            rel="noopener"
+            aria-label="Visit Robin Hobb's Instagram page (opens in new tab)"
+          >
+            <i class="fa-brands fa-instagram"></i
+          ></a>
+        </li>
+      </ul>
     </footer>
-<!-- font awesome script -->
-<script src="https://kit.fontawesome.com/205330c142.js" crossorigin="anonymous"></script>
-</body>
+    <!-- font awesome script -->
+    <script
+      src="https://kit.fontawesome.com/205330c142.js"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
