--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <title>Robin Hobb Fan Page</title>
   </head>
   <body>
-    <header class="bg-gray-900">
+    <header>
       <a href="index.html">
         <h1
           id="logo"
@@ -27,31 +27,39 @@
           Robin Hobb
         </h1>
       </a>
-      <nav class="space-x-4 m-15 ">
+      <nav class="space-x-2 m-15">
         <ul id="menu-bar">
           <li><a href="meetups.html" class="active">Meetups</a></li>
           <li><a href="collection.html" class="active">Collection</a></li>
           <li><a href="index.html" class="active">Home</a></li>
         </ul>
       </nav>
-      <div class="mb-3">
-        <p class="megan ml-2 font-bold text-xl">
+      <div class="mb-4">
+        <p class="megan text-2lg text-gray-600 text-opacity-70">
           A pseudonym used by Megan Lindholm
         </p>
       </div>
     </header>
-    <div id="hero-image"></div>
-    <br />
-    <div class="welcome">
-      <p>
-        Welcome! This is a fan page dedicated to Robin Hobb! Ahead you'll find a
-        bio on Robin Hobb and a video interview, social media and Amazon links
-        at the bottom of the page, and the following page you can check out her
-        books in chronological order, along with a summary and pictures of each
-        series. The last page you'll find where to apply for an email-list to
-        get involved with our meetups based in Dublin, Ireland!
-      </p>
+    <div id="hero-image" class="relative h-64 object-cover w-full h-full">
+      <div
+        class="absolute inset-0 flex items-center justify-center bg-black bg-opacity-40"
+      >
+        <div class="text-center bg-transparent">
+          <h1 class="text-white bg-transparent text-4xl font-bold">
+            Welcome to the Fantasy World
+          </h1>
+          <p class="text-white bg-transparent mx-auto p-4 max-w-md">
+            Discover the life and works of Robin Hobb, the brilliant mind behind
+            some of the most beloved fantasy series of our time. Dive into the
+            rich tapestry of her novels, where each page reveals new wonders and
+            surprises.
+          </p>
+        </div>
+      </div>
     </div>
+
+    <br />
+
     <div id="circle"></div>
     <h3 class="biography">Biography</h3>
     <div id="robin">
