Add: A new image for biography section

--- a/index.html
+++ b/index.html
@@ -53,11 +53,16 @@
         <div class="text-center bg-transparent">
           <h1
             class="text-white bg-transparent text-4xl font-bold"
-            data-aos="fade-up" data-aos-duration="2000"
+            data-aos="fade-down"
+            data-aos-duration="3000"
           >
             Welcome to the Fantasy World
           </h1>
-          <p class="text-white bg-transparent mx-auto p-4 max-w-md">
+          <p
+            class="text-white bg-transparent mx-auto p-4 max-w-md"
+            data-aos-duration="3000"
+            data-aos="zoom-out"
+          >
             Discover the life and works of Robin Hobb, the brilliant mind behind
             some of the most beloved fantasy series of our time. Dive into the
             rich tapestry of her novels, where each page reveals new wonders and
@@ -69,23 +74,31 @@
 
     <br />
 
-    <div id="circle"></div>
-    <h3 class="biography">Biography</h3>
-    <div id="robin">
+    <div id="circle">
+      <img
+        src="assets/images/robin_hobb.jpg"
+        alt="Circle Image"
+        class="w-58 h-58 rounded-full object-cover mx-8"
+        data-aos="zoom-out-up"
+        data-aos-duration="3000"
+      />
+    </div>
+    <h3 class="text-6xl font-semibold mb-6 biography">Biography</h3>
+    <div class="text-3xl m-11">
       <p>
-        Robin Hobb is an American writer of Fantasy novels, including the
-        award-winning Realm of the Elderlings series. She has also written and
-        published extensively under the name Megan Lindholm. Her best known work
-        is The Farseer Trilogy, now celebrating its 25th birthday with a lavish
-        illustrated edition, with work by the talented Magali Villeneuve. Other
-        works include The Liveship Traders Trilogy, The Tawny Many Trilogy, The
-        Rain Wild Chronicles, and The Fitz and the Fool Trilogy. Robin resides
-        in the Pacific Northwest, where she lives on a 14 acre pocket farm near
-        Roy, with her family, which includes two rescued Belgian Malinois,
-        Ginger and Molly, fifteen chickens, a gander and 8 ducks, numerous
-        volunteers, mallards and a cat named Little Black Dog.
+        Robin Hobb, an acclaimed American Fantasy novelist, is known for her
+        remarkable Realm of the Elderlings series. Writing extensively under the
+        name Megan Lindholm, her iconic works include The Farseer Trilogy,
+        celebrating its 25th birthday with a lavish illustrated edition. Other
+        notable works encompass The Liveship Traders Trilogy, The Tawny Many
+        Trilogy, The Rain Wild Chronicles, and The Fitz and the Fool Trilogy.
+        Residing in the Pacific Northwest, she shares her 14-acre pocket farm
+        near Roy with her family, two rescued Belgian Malinois, Ginger and
+        Molly, fifteen chickens, a gander and 8 ducks, numerous volunteers,
+        mallards, and a cat named Little Black Dog.
       </p>
     </div>
+
     <div id="video-text">
       <h4>
         Watch Robin Hobb and George R.R Martin discuss their careers in writing
