--- a/index.html
+++ b/index.html
@@ -78,14 +78,14 @@
       <img
         src="assets/images/robin_hobb.jpg"
         alt="Circle Image"
-        class="w-58 h-58 rounded-full object-cover mx-8"
+        class="w-58 h-58 rounded-full object-cover mx-4 mb-5"
         data-aos="zoom-out-up"
         data-aos-duration="3000"
       />
     </div>
-    <h3 class="text-6xl font-semibold mb-6 biography">Biography</h3>
-    <div class="text-3xl m-11">
-      <p>
+    <h3 class="text-6xl font-semibold m-2 biography">Biography</h3>
+    <div class="text-2xl m-11">
+      <p class="mr-4">
         Robin Hobb, an acclaimed American Fantasy novelist, is known for her
         remarkable Realm of the Elderlings series. Writing extensively under the
         name Megan Lindholm, her iconic works include The Farseer Trilogy,
@@ -99,23 +99,29 @@
       </p>
     </div>
 
-    <div id="video-text">
-      <h4>
-        Watch Robin Hobb and George R.R Martin discuss their careers in writing
-        fantasy!
-      </h4>
+    <div class="flex flex-col md:flex-row text-green-900 font-bold bg-green-100 bg-opacity-60 p-8 w-full h-full rounded-md">
+      <div class="md:w-2/3 md:mr-6">
+        <h4 class="text-xl font-semibold mb-4">
+          Watch Robin Hobb and George R.R. Martin discuss their careers in writing fantasy!
+        </h4>
+        <p class="font-normal hover:font-bold">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        </p>
+      </div>
+      <div class="md:w-1/3">
+        <div class="aspect-w-16 aspect-h-9">
+          <iframe
+            class="rounded-md"
+            src="https://www.youtube.com/embed/tXLYSnMIrXM"
+            title="YouTube video player"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          >
+          </iframe>
+        </div>
+      </div>
     </div>
-    <div id="video">
-      <iframe
-        width="100"
-        height="500"
-        src="https://www.youtube.com/embed/tXLYSnMIrXM"
-        title="YouTube video player"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen
-      >
-      </iframe>
-    </div>
+    
     <br />
     <footer>
       <h2>Find out more about Robin Hobb below!</h2>
